@@ -1,2 +1,0 @@
-AnyObjectId[8e096258a36f86e9b956e52f55df0b5afbe8999f] was removed in git history.
-Apache SVN contains full history.
